// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Captcha - Demo Customize 1`] = `
<div class="n22-example-child n22-example-child-captcha">
  <div class="md-captcha">
    <div position="center" class="n22-dialog">
      <div class="n22-popup with-mask center" style="display:none;">
        <div name="n22-mask-fade" class="n22-popup-mask" style="display:none;"></div>
        <div name="n22-fade" class="n22-popup-box n22-fade" style="display:none;">
          <div class="n22-dialog-content">
            <div class="n22-dialog-body"><a role="button" class="n22-dialog-close">
                <svg-icon icon-class="close" class="icon_c"></svg-icon>
              </a>
              <!---->
              <!---->
              <div class="md-captcha-content">
                <h2 class="md-captcha-title">输入验证码</h2>
                <div class="md-captcha-message">
                  验证码已发送至 186****5407
                </div>
              </div>
              <div class="md-codebox-wrapper">
                <div class="md-codebox is-justify"><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span></div>
                <footer class="md-captcha-footer">
                  <div class="md-captcha-brief"></div> <button class="md-captcha-btn">发送验证码</button>
                </footer>
                <form action="" style="display:none;"><input type="text" maxlength="4" value="" class="md-codebox-input"></form>
                <div class="md-number-keyboard md-codebox-keyboard">
                  <md-popup position="bottom">
                    <!---->
                    <div class="md-number-keyboard-container simple">
                      <div class="keyboard-number">
                        <ul class="keyboard-number-list">
                          <li class="keyboard-number-item"><span>1</span></li>
                          <li class="keyboard-number-item"><span>2</span></li>
                          <li class="keyboard-number-item"><span>3</span></li>
                          <li class="keyboard-number-item"><span>4</span></li>
                          <li class="keyboard-number-item"><span>5</span></li>
                          <li class="keyboard-number-item"><span>6</span></li>
                          <li class="keyboard-number-item"><span>7</span></li>
                          <li class="keyboard-number-item"><span>8</span></li>
                          <li class="keyboard-number-item"><span>9</span></li>
                          <li class="keyboard-number-item no-bg"></li>
                          <li class="keyboard-number-item"><span>0</span></li>
                          <li class="keyboard-number-item no-bg delete"><span></span></li>
                        </ul>
                      </div>
                      <!---->
                    </div>
                  </md-popup>
                </div>
              </div>
            </div>
            <footer class="n22-dialog-actions"></footer>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Captcha - Demo Inline display 1`] = `
<div class="n22-example-child n22-example-child-captcha-1">
  <div class="md-captcha">
    <div class="md-captcha-content">
      <!---->
      <div class="md-captcha-message">
        验证码已发送至186****5407
      </div>
    </div>
    <div class="md-codebox-wrapper">
      <div class="md-codebox is-justify"><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span><span class="md-codebox-box"><!----> <!----></span></div>
      <footer class="md-captcha-footer">
        <div class="md-captcha-brief">最新验证码依然有效，请勿重发</div> <button class="md-captcha-btn">发送验证码</button>
      </footer>
      <form action="" style="display:none;"><input type="text" maxlength="4" value="" class="md-codebox-input"></form>
      <div class="md-number-keyboard md-codebox-keyboard in-view">
        <!---->
        <div class="md-number-keyboard-container simple">
          <div class="keyboard-number">
            <ul class="keyboard-number-list">
              <li class="keyboard-number-item"><span>1</span></li>
              <li class="keyboard-number-item"><span>2</span></li>
              <li class="keyboard-number-item"><span>3</span></li>
              <li class="keyboard-number-item"><span>4</span></li>
              <li class="keyboard-number-item"><span>5</span></li>
              <li class="keyboard-number-item"><span>6</span></li>
              <li class="keyboard-number-item"><span>7</span></li>
              <li class="keyboard-number-item"><span>8</span></li>
              <li class="keyboard-number-item"><span>9</span></li>
              <li class="keyboard-number-item no-bg"></li>
              <li class="keyboard-number-item"><span>0</span></li>
              <li class="keyboard-number-item no-bg delete"><span></span></li>
            </ul>
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;
